istio-wp-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: wordpress-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: wordpress
  namespace: default
spec:
  hosts:
  #- "*"
  - "wp1.tsm.fbclouddemo.us"
  gateways:
  - wordpress-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: wordpress
        #host: wordpress.wp-tsm.fbclouddemo.io
        port:
          number: 80
